tests/dataset/tpc-ds/compiler/c/q42.error
/tmp/TestCCompiler_TPCDS_Goldenq421911808396/001/prog.c: In function ‘test_TPCDS_Q42_simplified’:
/tmp/TestCCompiler_TPCDS_Goldenq421911808396/001/prog.c:255:20: error: incompatible types when initializing type ‘int’ using type ‘tmp_item_t’
  255 |                    (tmp_item_t){.d_year = 2020,
      |                    ^
/tmp/TestCCompiler_TPCDS_Goldenq421911808396/001/prog.c:261:51: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  261 |   if (test_TPCDS_Q42_simplified_result.len != tmp1.len) {
      |                                                   ^
      |                                                   ->
/tmp/TestCCompiler_TPCDS_Goldenq421911808396/001/prog.c:265:60: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  265 |       if (test_TPCDS_Q42_simplified_result.data[i3] != tmp1.data[i3]) {
      |                                                            ^
      |                                                            ->
/tmp/TestCCompiler_TPCDS_Goldenq421911808396/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_TPCDS_Goldenq421911808396/001/prog.c:297:7: warning: implicit declaration of function ‘records_item_list_t_create’ [-Wimplicit-function-declaration]
  297 |       records_item_list_t_create(date_dim.len * store_sales.len * item.len);
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq421911808396/001/prog.c:297:42: error: ‘(date_dim_t *)&date_dim’ is a pointer; did you mean to use ‘->’?
  297 |       records_item_list_t_create(date_dim.len * store_sales.len * item.len);
      |                                          ^
      |                                          ->
/tmp/TestCCompiler_TPCDS_Goldenq421911808396/001/prog.c:297:60: error: ‘(store_sale_t *)&store_sales’ is a pointer; did you mean to use ‘->’?
  297 |       records_item_list_t_create(date_dim.len * store_sales.len * item.len);
      |                                                            ^
      |                                                            ->
/tmp/TestCCompiler_TPCDS_Goldenq421911808396/001/prog.c:297:71: error: ‘(item_t *)&item’ is a pointer; did you mean to use ‘->’?
  297 |       records_item_list_t_create(date_dim.len * store_sales.len * item.len);
      |                                                                       ^
      |                                                                       ->
/tmp/TestCCompiler_TPCDS_Goldenq421911808396/001/prog.c:325:30: warning: implicit declaration of function ‘grouped_item_list_t_create’ [-Wimplicit-function-declaration]
  325 |   grouped_item_list_t tmp9 = grouped_item_list_t_create(grouped.len);
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq421911808396/001/prog.c:325:30: error: invalid initializer
/tmp/TestCCompiler_TPCDS_Goldenq421911808396/001/prog.c:373:38: error: incompatible types when assigning to type ‘list_int’ from type ‘grouped_item_list_t’
  373 |   test_TPCDS_Q42_simplified_result = result;
      |                                      ^~~~~~
